--- a/Tests/Podfile
+++ b/Tests/Podfile
@@ -1,3 +1,8 @@
-platform :ios
+platform :ios, '6.0'
 
-podspec podspec: "../ConstraintFormatter.podspec"
+pod 'ConstraintFormatter', :path => '../'
+#podspec :podspec => '../ConstraintFormatter.podspec'
+
+target :ConstraintFormatterTests, :exclusive => true do
+  pod 'Kiwi/XCTest'
+end
