--- a/Tests/Podfile
+++ b/Tests/Podfile
@@ -4,5 +4,5 @@ pod 'ConstraintFormatter', :path => '../'
 #podspec :podspec => '../ConstraintFormatter.podspec'
 
 target :ConstraintFormatterTests, :exclusive => true do
-  pod 'Kiwi/XCTest'
+  pod 'Kiwi', '2.3.1'
 end
